# CuTS

./: 2nodes_exe.sh  4nodes_exe.sh  CMakeLists.txt  LICENSE  README.md  build.sh  compare_with_gsi.xlsx  cuts.py  download.sh  gen_shell_lines.py  main.cu  main_mpi.cu  multi_nodes_speedup.xlsx
data_set/data/: cuts_graph_converter.py
data_set/query/: convert_ours_to_gsi.py
data_set/query/gsi_format/5nodes/: 0.g  1.g  10.g  11.g  12.g  13.g  14.g  15.g  16.g  17.g  18.g  19.g  2.g  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  3.g  30.g  31.g  4.g  5.g  6.g  7.g  8.g  9.g
data_set/query/gsi_format/6nodes/: 0.g  1.g  10.g  11.g  12.g  13.g  14.g  15.g  16.g  17.g  18.g  19.g  2.g  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  3.g  30.g  31.g  4.g  5.g  6.g  7.g  8.g  9.g
data_set/query/gsi_format/7nodes/: 0.g  1.g  10.g  11.g  12.g  13.g  14.g  15.g  16.g  17.g  18.g  19.g  2.g  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  3.g  30.g  31.g  4.g  5.g  6.g  7.g  8.g  9.g
data_set/query/ours_format/: 1.g  10.g  11.g  12.g  13.g  14.g  15.g  16.g  17.g  18.g  19.g  2.g  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  3.g  30.g  31.g  32.g  33.g  4.g  5.g  6.g  7.g  8.g  9.g
inc/: common.h  device_funcs.h  free_memories.h  gpu_memory_allocation.h  graph.h  host_funcs.h  score.h  util.h
src/: common.cpp  device_funcs.cu  free_memories.cu  gpu_memory_allocation.cu  graph.cpp  host_funcs.cu  score.cpp  util.cpp
